pushinog last css for the day

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
             <span></span>
         </div>
 
-            <ul>
+            <ul class="nav-list">
                 <li>HOME</li>
                 <li>WORK</li>
                 <li>ABOUT</li>
                 <li>CONTACT</li>
             </ul>
+
 
 
     </div>
