--- a/index.html
+++ b/index.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>My Project</title>
-  <link rel="stylesheet" href="index.css">
-</head>
-<body>
-
-  <div id="sidebar">
-    <div class="toggle-btn">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-
-    <ul class="nav-list">
-      <li>HOME</li>
-      <li>WORK</li>
-      <li>ABOUT</li>
-      <li>CONTACT</li>
-    </ul>
-  </div>
-
-  <button onclick="showSnackbar()">Show Snackbar</button>
-
-  <div id="snackbar">This is a snackbar message!</div>
-
-  <script>
-    function showSnackbar() {
-      const snackbar = document.getElementById("snackbar");
-      snackbar.classList.add("show");
-      setTimeout(() => {
-        snackbar.classList.remove("show");
-      }, 3000);
-    }
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Website</title>
+    <link rel="stylesheet" href="index.css">
+  
+  </head>
+  <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    <main>
+        <h1>Welcome to My Website</h1>  
+    </main>
+    <script src="Landing JS"></script>
+  </body>
 </html>
